feat: Ambience toggle integration

--- a/style.css
+++ b/style.css
@@ -526,9 +526,9 @@ canvas[class="dominant-emotion"] {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 89%;
+  width: 90%;
   min-height: 10%;
-  max-height: 240px;
+  max-height: 90%;
   align-items: flex-start;
   justify-content: flex-start;
   padding: 16px 16px;
@@ -536,7 +536,6 @@ canvas[class="dominant-emotion"] {
   margin: 19px;
   position: relative;
   flex-wrap: wrap;
-  overflow: hidden;
   border-radius: 15px;
   background-color: #000000ac;
   box-shadow: 0 0 0 6px rgba(255, 255, 255, 0.05), 0 0 8px #ffffff;
@@ -545,7 +544,7 @@ canvas[class="dominant-emotion"] {
   font-weight: 100;
   font-size: 1.9rem;
   letter-spacing: 1px;
-  text-shadow: white 0 0 6px, black 0 0 2px;
+  text-shadow: white 0 0 3px, black 0 0 2px;
   color: #cfcfcf;
   z-index: 10;
 }
@@ -1384,7 +1383,7 @@ input[type="range"]::-ms-tooltip {
 
 
 /* ========== Toggle Switch from Uiverse.io ========== */
-#checkboxInput {
+input.toggle-checkbox {
   display: none;
 }
 
@@ -1422,13 +1421,19 @@ input[type="range"]::-ms-tooltip {
 }
 
 /* Toggle ON styles */
-#checkboxInput:checked + .toggleSwitch {
+
+input[type="checkbox"] {
+  display: none;
+}
+
+input[type="checkbox"]:checked + .toggleSwitch {
   background-color: rgb(55, 55, 55);
 }
 
-#checkboxInput:checked + .toggleSwitch::after {
+input[type="checkbox"]:checked + .toggleSwitch::after {
   transform: translateX(100%);
 }
+
 
 #gpt-output::after {
   content: "_";
